# nxp-agentic-geoguesser

./: .gitignore  README.md  fun_fact.py  image_detection.py  main.py  ollama_prompter.py  pyproject.toml
static/: index.html
templates/: index.html
