[project]
name = "nxp-agentic-geoguesser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "jinja2>=3.1.6",
    "uvicorn[standard]>=0.41.0",
    "python-multipart>=0.0.9",
    "ollama>=0.3.0",
    "pillow>=10.0.0",
    "transformers>=4.45.0",
    "torch>=2.0.0",
]
